fix: pagination value not showing

--- a/src/styles/tablePagination.css
+++ b/src/styles/tablePagination.css
@@ -44,6 +44,7 @@
 .entries_input_icon {
   flex-shrink: 0;
   display: flex;
+  padding: 0;
 }
 
 .entries_input {
